--- a/graphs/.gitignore
+++ b/graphs/.gitignore
@@ -18,3 +18,22 @@
 /TopologicalSorting$1$4.class
 /TopologicalSorting$1$5.class
 /TopologicalSorting$1.class
+/AreasInMatrix.class
+/BreakCycles.class
+/DistanceBetweenVertices.class
+/Edge.class
+/KruskalMST.class
+/Test.class
+/ArticulationPoints.class
+/ArticulationPoints$1.class
+/ArticulationPoints$10.class
+/ArticulationPoints$11.class
+/ArticulationPoints$12.class
+/ArticulationPoints$2.class
+/ArticulationPoints$3.class
+/ArticulationPoints$4.class
+/ArticulationPoints$5.class
+/ArticulationPoints$6.class
+/ArticulationPoints$7.class
+/ArticulationPoints$8.class
+/ArticulationPoints$9.class
