preparing for the exam

--- a/exam_prep/.gitignore
+++ b/exam_prep/.gitignore
@@ -1,2 +1,9 @@
 /Blocks.class
 /PathInMatrix.class
+/UnlimitedCoins.class
+/Medenka.class
+/CableMerchant.class
+/Sticks.class
+/Robbery.class
+/Robbery$Edge.class
+/Robbery$1.class
